<resources>
    <string name="app_name">RTEGame</string>

    <string name="exit">退出</string>

    <!--    Splash page-->
    <string name="error_desc">RTM初始化出错</string>
    <string name="error_happened_click_to_refresh">出错了，再试一次</string>
    <!--    Room List-->
    <string name="please_create_a_room">请创建一个直播间</string>
    <string name="desc_create_room">创建直播间</string>
    <string name="desc_room_list_empty">房间列表为空</string>

    <!--    Create Room-->
    <string name="flip_camera">翻转相机</string>
    <string name="random_room_name">随机生成房间名</string>
    <string name="title_room_name">直播间名字:</string>
    <string name="live_begin">开始直播</string>
    <string name="beauty">美颜</string>
    <string name="setting">设置</string>

    <!--    ROOM-->
    <string name="input_hint">说点什么…</string>
    <string name="host_list">主播列表</string>
    <string name="invite_host_pk">游戏PK邀请</string>
    <string name="empty_host_list">没有可邀请的主播,刷新试试</string>
    <string name="tools">工具</string>
    <string name="camera">摄像头</string>
    <string name="camera_tip">是否发布本地视频流</string>
    <string name="mic">麦克风</string>
    <string name="mic_tip">是否发布本地音频流</string>
    <string name="game">游戏</string>
    <string name="exit_game">退出游戏</string>
    <string name="exit_pk">终止连麦</string>

    <string name="donate">赠送</string>
    <string name="gift">礼物</string>
    <string name="gift_received">%s赠送了%s%s</string>
    <string name="user_msg"><![CDATA[
         <font color=\'#0091FC\'>%s</font>：%s
        ]]></string>

    <string name="game_mode">游戏模式</string>
    <string name="pk_with_mic">连麦PK</string>


    <string name="screen_share_request_denied">Screen share cancelled</string>
    <string name="screen_share_version_unsupported">Screen Share do not support on this Android version</string>
    <string name="notify_recording_screen">正在录制屏幕内容…</string>
    <string name="notify_service_desc">Notice that we are trying to capture the screen!!</string>
    <string name="notify_channel_id">agora_media_project</string>

    <!--    权限-->
    <string name="permission_refused">APP运行所必需的权限被拒绝</string>
    <string name="permission_alert">此APP功能为视频通话，录音及摄像头权限为功能必需，是否继续？</string>

    <string-array name="gift_name_list">
        <item>铃铛</item>
        <item>冰淇淋</item>
        <item>红酒</item>
        <item>蛋糕</item>
        <item>戒指</item>
        <item>手表</item>
        <item>钻石</item>
        <item>火箭</item>
    </string-array>
    <string-array name="gift_name_list_emoji">
        <item>🔔</item>
        <item>🍦</item>
        <item>🍷</item>
        <item>🍰</item>
        <item>💍</item>
        <item>⌚️</item>
        <item>💎</item>
        <item>🚀</item>
    </string-array>
    <string-array name="gift_name_list_eng">
        <item>SuperBell</item>
        <item>SuperIcecream</item>
        <item>SuperWine</item>
        <item>SuperCake</item>
        <item>SuperRing</item>
        <item>SuperWatch</item>
        <item>SuperDiamond</item>
        <item>SuperRocket</item>
    </string-array>
</resources>