<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <io.agora.sample.rtegame.view.LiveHostLayout
        android:id="@+id/host_container_fg_room"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_overlay_fg_room"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_host_fg_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_normal"
            app:cardBackgroundColor="?attr/scrimBackground"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/roundStyle">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="8dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar_host_fg_room"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ic_launcher"
                    app:shapeAppearance="@style/roundStyle" />

                <TextView
                    android:id="@+id/name_host_fg_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_small"
                    android:textColor="@android:color/white"
                    tools:text="@string/app_name" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_fg_room"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="@dimen/space_normal"
            android:fadingEdge="vertical"
            android:orientation="vertical"
            android:requiresFadingEdge="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.4"
            app:stackFromEnd="true"
            tools:listitem="@layout/item_room_message" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_fg_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint"
            android:visibility="gone"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_fg_room"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Bottom Part-->
        <com.google.android.material.chip.Chip
            android:id="@+id/input_fg_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_normal"
            android:stateListAnimator="@null"
            app:chipMinTouchTargetSize="0dp"
            android:text="@string/input_hint"
            android:textColor="@android:color/white"
            app:chipEndPadding="@dimen/space_big"
            app:chipSurfaceColor="?attr/scrimBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_donate_fg_room"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/space_normal"
            android:background="@android:color/transparent"
            android:contentDescription="@string/exit"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gift"
            android:tintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_game_fg_room"
            app:tint="@color/selector_color_scrim" />

        <ImageButton
            android:id="@+id/btn_game_fg_room"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/space_normal"
            android:background="@android:color/transparent"
            android:contentDescription="@string/game"
            android:scaleType="fitXY"
            android:src="@drawable/ic_game"
            android:tintMode="src_atop"
            android:tooltipText="@string/game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_more_fg_room"
            app:tint="@color/selector_color_scrim"
            tools:targetApi="o" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_exit_game_fg_room"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="@dimen/space_normal"
            android:layout_marginStart="@dimen/space_normal"
            android:stateListAnimator="@null"
            android:text="@string/exit_game"
            android:textColor="@android:color/white"
            app:chipMinTouchTargetSize="0dp"
            app:chipSurfaceColor="?attr/scrimBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_more_fg_room" />

        <ImageButton
            android:id="@+id/btn_more_fg_room"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/space_normal"
            android:background="@android:color/transparent"
            android:contentDescription="@string/tools"
            android:scaleType="fitXY"
            android:src="@drawable/ic_more"
            android:tintMode="src_atop"
            android:tooltipText="@string/tools"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_exit_fg_room"
            app:tint="@color/selector_color_scrim"
            tools:targetApi="o" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_exit_pk_fg_room"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            tools:visibility="visible"
            android:stateListAnimator="@null"
            android:layout_margin="@dimen/space_normal"
            android:layout_marginStart="@dimen/space_normal"
            android:text="@string/exit_pk"
            android:textColor="@android:color/white"
            app:chipMinTouchTargetSize="0dp"
            app:chipSurfaceColor="?attr/scrimBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_exit_fg_room" />

        <ImageButton
            android:id="@+id/btn_exit_fg_room"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/space_normal"
            android:background="@android:color/transparent"
            android:contentDescription="@string/exit"
            android:scaleType="fitXY"
            android:src="@drawable/ic_close"
            android:tintMode="src_atop"
            android:tooltipText="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/selector_color_scrim"
            tools:targetApi="o" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/gift_image_fg_room"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:contentDescription="@string/gift"
        android:focusable="false" />
</FrameLayout>